# PROI-STUD

./: .doxygen-config  .gitattributes  .gitignore  CMakeLists.txt  Car.cpp  Car.h  IMap.h  IMapObject.h  IMapView.h  IRenderAddon.h  Map.cpp  Map.h  Object.cpp  Object.h  README.md  Tools.cpp  Tools.h  Window.cpp  Window.h  main.cpp  test_scenarios.md
tests/: CMakeLists.txt  car.cpp  dummy_test.cpp  scenarios.cpp  tools.cpp
